remote commit, adjusted the layout to match with the mockup

--- a/finalProject1.html
+++ b/finalProject1.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width,, initial-scale=1">
         <title>Mockup Portfolio Page</title>
         <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <div class="container">
@@ -18,12 +18,13 @@
                 <div class="col-md-5">
                     <div style="height: 13px"></div>
                     <img class="img-responsive" src="images/mug.png">
-                    <div style="height: 12px"></div>
+                    <div style="height: 11px"></div>
                     <br>
-                    <div class="text-justify col-md-12 text-box" style="height: 222px"> 
+                    <div class="text-center col-md-12 text-box" style="height: 224px"> 
                         <!-- <div style="width: 100px"></div> -->
-                        <h2><font color = "#f07c17"><br>Main Features</font></h2>
-                        <br>
+                        <div style="height: 16px"></div>
+                        <h2><div style="width :220px"> <font color = "#f07c17">Main Features</font></div></h2>
+                        <div style="height: 26px"></div>
                         <div class="text-left col-md-12 p2">
                             <ul><font color="#666"> 
                                 <li>Holds your favorite drink</li>
@@ -37,7 +38,7 @@
                 <div class="col-md-7">
                     <h2><font color = "#f07c17">A Good Way to Start a Day</font></h2>
                     <font color= "#666">
-                    <div style="height: 25px"></div>
+                    <div style="height: 26px"></div>
                     <p class="p2">Bacon ipsum dolor sit amet shoulder drumstick spare ribs shank, magna in sirloin. Turducken dolore tempor irure tenderloin pork belly shankle. Excepteur in strip steak pork chop voluptate tongue, hamburger nostrud kevin enim nulla ut cow incididunt. Do pancetta swine hamburger incididunt in excepteur irure pig labore est venison dolor ex adipisicing. Labore capicola veniam, commodo corned beef ut non rump swine pork chop exercitation ball tip ham deserunt.
                     </p>
                     <p class="p2">Ad tri-tip short loin anim beef ribs eu ball tip velit deserunt frankfurter sunt nisi filet mignon. Pork loin quis ham hock mollit cupidatat. Id ground round chuck jerky meatball laborum frankfurter short loin in biltong t-bone doner ea irure. Culpa ex ut id. Nostrud t-bone bresaola pariatur qui tri-tip pork chop, ribeye irure velit pork et in dolore.
